--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@ Dark Green: #28b485; */
 
 @import "components/button";
 
+@import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";
