new section design done

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@ Dark Green: #28b485; */
 @import "base/utilities";
 
 @import "components/button";
+@import "components/composition";
+@import "components/feature-box";
 
 @import "layout/grid";
 @import "layout/header";
