featured section design complete

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ body {
   text-align: center;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-  transition: transform 0.2s;
+  transition: transform 0.3s;
   cursor: pointer; }
   .feature-box__icon {
     font-size: 6rem;
@@ -230,19 +230,19 @@ body {
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
-      margin-right: 3rem; }
+      margin-right: 6rem; }
   .row .col-1-of-2 {
-    width: calc((100% - 3rem) / 2); }
+    width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - 2 * 3rem) / 3); }
+    width: calc((100% - 2 * 6rem) / 3); }
   .row .col-1-of-4 {
-    width: calc((100% - 3 * 3rem) / 4); }
+    width: calc((100% - 3 * 6rem) / 4); }
   .row .col-2-of-3 {
-    width: calc( 2 * ((100% - 2 * 3rem) / 3) + 3rem); }
+    width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem); }
   .row .col-2-of-4 {
-    width: calc( (2 * (100% - 3 * 3rem) / 4) + 3rem); }
+    width: calc( (2 * (100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
-    width: calc( (3 * (100% - 3 * 3rem) / 4) + 2 * 3rem); }
+    width: calc( (3 * (100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
 .header {
   height: 95vh;
@@ -270,6 +270,10 @@ body {
   margin-top: -20vh; }
 
 .section-features {
+  margin-top: -10rem;
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
-  background-size: cover; }
+  background-size: cover;
+  transform: skewY(-7deg); }
+  .section-features > * {
+    transform: skewY(7deg); }
