--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,6 +5,7 @@
 }
 
 .section-features {
+  margin-top: -10rem;
   padding: 20rem 0;
   background-image: linear-gradient(
       to right bottom,
@@ -12,6 +13,10 @@
       rgba($color-primary-dark, 0.8)
     ),
     url("../img/nat-4.jpg");
-
   background-size: cover;
+  transform: skewY(-7deg);
+
+  & > * {
+    transform: skewY(7deg);
+  }
 }
