card ddesign i on progress

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@ Dark Green: #28b485; */
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/card";
 
 @import "layout/grid";
 @import "layout/header";
