--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -67,6 +67,8 @@
     -webkit-background-clip: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     background-clip: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 
     &--1 {
       background-image: linear-gradient(
@@ -77,10 +79,20 @@
         url(../../img/nat-5.jpg);
     }
     &--2 {
-      background-image: url(../../img/nat-6.jpg);
+      background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        ),
+        url(../../img/nat-6.jpg);
     }
     &--3 {
-      background-image: url(../../img/nat-7.jpg);
+      background-image: linear-gradient(
+          to right bottom,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        ),
+        url(../../img/nat-7.jpg);
     }
   }
 
@@ -142,5 +154,31 @@
         }
       }
     }
+  }
+
+  // BACK SIDE STYLING
+
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center;
+  }
+
+  &__price-box {
+    margin-bottom: 8rem;
+    color: $color-white;
+  }
+
+  &__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+
+  &__price-value {
+    font-size: 6rem;
+    font-weight: 100;
   }
 }
