video backgroundd added

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@ Dark Green: #28b485; */
 @import "components/feature-box";
 @import "components/card";
 @import "components/story";
+@import "components/video";
 
 @import "layout/grid";
 @import "layout/header";
