--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,5 +29,6 @@
 
 .section-stories {
   padding: 15rem 0;
-  background-color: $color-grey-light-1;
+  background-color: transparent;
+  position: relative;
 }
