booking section desing complete

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@ Dark Green: #28b485; */
 @import "components/card";
 @import "components/story";
 @import "components/video";
+@import "components/form";
 
 @import "layout/grid";
 @import "layout/header";
