navigation halfwork complete

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,5 +22,6 @@ Dark Green: #28b485; */
 @import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
+@import "layout/navigation";
 
 @import "pages/home";
