--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -10,8 +10,11 @@
     position: fixed;
     top: 6rem;
     right: 6rem;
-    z-index: 1001;
+    z-index: 1005;
     border-radius: 50%;
+    box-shadow: rgba($color-black, 0.5);
+    text-align: center;
+    cursor: pointer;
   }
 
   &__background {
@@ -26,17 +29,19 @@
       $color-primary-dark
     );
     z-index: 1000;
-
-    transform: scale(100);
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.87, 1);
   }
 
   &__nav {
     height: 100vh;
-    width: 100%;
+    // width: 100%;
     position: fixed;
     top: 0;
     right: 0;
     z-index: 1002;
+    opacity: 0;
+    width: 0;
+    transition: all 0.8s;
   }
 
   &__list {
@@ -46,6 +51,7 @@
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
+    width: 100%;
   }
 
   &__item {
@@ -79,5 +85,67 @@
       color: $color-primary;
       transform: translateX(1rem);
     }
+  }
+
+  //   FUnctionality
+
+  &__checkbox:checked ~ &__background {
+    transform: scale(100);
+  }
+
+  &__checkbox:checked ~ &__nav {
+    opacity: 1;
+    width: 100%;
+  }
+
+  //   Icon
+  &__icon {
+    position: relative;
+    margin-top: 3.5rem;
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-dark-3;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all 0.2s;
+    }
+
+    &::before {
+      top: -0.8rem;
+    }
+
+    &::after {
+      top: 0.8rem;
+    }
+  }
+
+  &__button:hover &__icon::before {
+    top: -1rem;
+  }
+
+  &__button:hover &__icon::after {
+    top: 1rem;
+  }
+
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+  }
+
+  &__checkbox:checked + &__button &__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+  }
+  &__checkbox:checked + &__button &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
   }
 }
