--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@ Dark Green: #28b485; */
 @import "components/story";
 @import "components/video";
 @import "components/form";
+@import "components/popup";
 
 @import "layout/grid";
 @import "layout/header";
