--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,11 +6,32 @@
   box-sizing: inherit;
 }
 
+// Always maintain the media query order
+
 html {
   // This define what 1rem is
   font-size: 62.5%;
+
+  @include respond(tab-land) {
+    //width < 900px
+    font-size: 56.25%; //1rem = 9px, 9/16 = 56.25%
+  }
+
+  @include respond(tab-port) {
+    //width < 600px
+    font-size: 50%; //1rem = 8px, 8/16 = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 80%; //1rem = 12px, 12/16 = 75%
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
